tmux default path home directory.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,3 +51,6 @@ set-window-option -g window-status-current-fg green
 
 # Constrain window size to maximum size of client connected to that window
 setw -g aggressive-resize on
+
+# Default to home directory
+set -g default-path '~'
