testing tmux changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,9 +33,15 @@ bind > resize-pane -R 5
 bind ^ resize-pane -U 5
 bind _ resize-pane -D 5
 
-#terminal
-#set -g default-terminal "xterm-256color"
+# Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# #terminal
+set -g default-terminal "xterm-256color"
+# set -g default-terminal "screen-256color"
+# set -g default-shell /bin/zsh
+# set-option -g default-command "reattach-to-user-namespace -l /bin/bash --login"
+# new -n WindowName bash --login
 
 #########
 # Theme #
@@ -54,3 +60,6 @@ setw -g aggressive-resize on
 
 # Default to home directory
 set -g default-path '~'
+
+# unbind Tab
+unbind -n Tab
