--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,18 @@ test_worker_emails.log
 atlassian-ide-plugin.xml
 .vscode
 .vscode*
+
+# Compiled Python files
+*.pyc
+
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
